--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -17,16 +17,19 @@
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".view.LoginActivity"
             android:label="@string/title_activity_login">
         </activity>
 
         <activity
-            android:name=".ChatActivity">
+            android:name=".view.ChatActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.robin.androidproject4.MainActivity" />
+                android:value=".view.MainActivity" />
         </activity>
-
     </application>
+
+    <!-- For camera -->
+    <permission android:name="WRITE_EXTERNAL_STORAGE"/>
+
 </manifest>
