Add preliminary code for showing image attached to message.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <!-- For camera -->
     <permission android:name="WRITE_EXTERNAL_STORAGE" />
+    <permission android:name="INTERNET" />
 
     <application
         android:allowBackup="true"
