--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.example.robin.androidproject4">
 
     <!-- For accessing back end -->
-    <permission android:name="INTERNET" />
+    <uses-permission android:name="INTERNET" />
+
+    <!-- For reading images from phone -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
